--- a/public/admin/css/admin.css
+++ b/public/admin/css/admin.css
@@ -66,7 +66,7 @@
     list-style: none;
     background-color: #f5f5f5;
     border-radius: 4px;
-    margin-left: 15px;
+    margin-left: 0px;
 }
 .main .system a:first-child{
     /* color: #337ab7; */
@@ -79,8 +79,14 @@
 /* 内容部分 */
 .content {
     width: 100%;
-    margin: 20px 15px 0 15px;
-    text-align: center;
+    // margin: 15px 15px 0 15px;
+    // text-align: center;
+}
+.content table {
+  margin-top: 20px;
+}
+th,td {
+   text-align:center;
 }
 
 /* 柱状图 */
