--- a/public/Tmobile/css/search.css
+++ b/public/Tmobile/css/search.css
@@ -40,9 +40,9 @@ html,body {
   border-radius: 8px;
 }
 
-.lt-search .search-history {
+/* .lt-search .search-history {
 
-}
+} */
 
 .lt-search .search-history-title {
   width: 100%;
@@ -77,6 +77,7 @@ html,body {
 
 .lt-search .search-history-list i {
   line-height: 30px;
+  padding: 0 10px;
 }
 
 
